<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
        android:gravity="center"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:entries="@array/gender_array"
        android:orientation="horizontal"
        android:freezesText="true">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_male"
            android:text="@string/male"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/ic_female"
            android:text="@string/female"
            android:layout_weight="1"/>
    </RadioGroup>
</LinearLayout>
</android.support.v7.widget.CardView>