<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorBackGround"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:elevation="1dp"
        android:layout_marginBottom="48dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center_horizontal|top"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/bgheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/beer"
                app:layout_collapseMode="parallax"
                android:alpha="0.7"
                android:contentDescription="@string/beer" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/recycler_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:behavior_overlapTop="96dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="-72dp" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                app:ci_drawable="@drawable/blue_circle"
                app:ci_drawable_unselected="@drawable/black_circle"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"

            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:behavior_overlapTop="250dp" />



    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="80dp"
        app:cardCornerRadius="0dp"
        android:layout_gravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/calc"
            android:gravity="center" />

    </android.support.v7.widget.CardView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="16dp"
        android:tint="@android:color/white"
        android:layout_gravity="bottom|end"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/shots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fab_size="mini"
            app:fab_label="@string/shots"
            android:src="@drawable/ic_shots_fab" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/wine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fab_size="mini"
            app:fab_label="@string/wine"
            android:src="@drawable/ic_wine_fab" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fab_size="mini"
            app:fab_label="@string/beer"
            android:src="@drawable/ic_beer_fab" />

    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>
